<resources>
    <string name="app_name">AppInmobiliariaHugo</string>
    <string name="editText_Email">Email</string>
    <string name="editText_Password">Password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">nombre apellido</string>
    <string name="nav_header_subtitle">mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_propiedades">Propiedades</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <string name="menu_send">Send</string>
    <string name="btn_login">SIGN IN OR REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
