<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.appinmobiliariahugo.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_propiedades"
        android:name="com.example.appinmobiliariahugo.PropiedadesFragment"
        android:label="@string/menu_propiedades"
        tools:layout="@layout/fragment_propiedades" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.appinmobiliariahugo.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.example.appinmobiliariahugo.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_pagos" />

    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.example.appinmobiliariahugo.CerrrarsesionFragment"
        android:label="@string/menu_cerrarsesion"
        tools:layout="@layout/fragment_cerrarsesion" />


    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.appinmobiliariahugo.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />
</navigation>